refactor: restructure to Maven-style package layout
- Move all flat src/*.java into proper packages under src/main/java/com/refund/routing/
  - model/       CustomerTier, PaymentMethod, RefundChannel, RefundRequest, RoutingDecision, RetryPolicy
  - rule/        RoutingRule (interface), HighValueRule, VipCustomerRule, OriginalPaymentMethodRule, ChannelScoringRule, FallbackRule
  - registry/    ChannelMetadata, ChannelRegistry
  - engine/      RefundRoutingEngine
  - config/      RefundRoutingConfig
  - ratelimiter/ SlidingWindowRateLimiter, UserBucket
  - server/      RefundRoutingServer (main entry point)
  - util/        StructuredLogger
- Move test to src/test/java/com/refund/routing/RefundRoutingTest.java
- Move refund-routing.properties to src/main/resources/
- Add compile.sh build script (./compile.sh test | run)
- Add proper package declarations and cross-package imports to all files
- All 33 tests pass after restructuring

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>